modif bouton participer

--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -28,7 +28,7 @@
 				<div>
 					<label class="my-3" for="firstName">Email</label>
 					<input type="mail" class="form-control" id="mail" name="mail" placeholder="Entrer votre email" value="{{user.mail}}">
-					<p class="text-danger">{{errors[3]}}</p>
+					<p class="text-danger">{{errors.mail}}</p>
 				</div>
 				<div>
 					<label class="my-3" for="firstName">Mot de passe</label>
