--- a/views/template/event/updateEvent.html.twig
+++ b/views/template/event/updateEvent.html.twig
@@ -3,7 +3,7 @@
 	<main>
 		<div class="container">
 			<div class="row ">
-				<form class="col-md-6 mx-auto mt-5 p-3 my-5 bg-light rounded" method="post" action="/modifierEvenement/{{event._id}}/{{user._id}}">
+				<form class="col-md-6 mx-auto mt-5 p-3 my-5 bg-light rounded" method="post" action="/modifierEvenement/{{event._id}}/{{userEvent._id}}">
 					<h3 class="text-primary">Modifies ta sortie</h1>
 					<hr class="m-0">
 					{% for err in errors %}
@@ -52,8 +52,8 @@
 						<input type="text" class="form-control" id="title" name="title" placeholder="" value="{{event.title}}">
 					</div>
 					<div class="mt-2">
-						<label for="description">Description :</label>
-						<input type="textera" class="form-control" id="description" name="description" placeholder="" value="{{event.description}}">
+						<label for="description">Description</label>
+						<textarea type="textera" rows="5" cols="8" class="form-control" id="description" name="description" placeholder="Votre description" value="{{event.description}}"></textarea>
 					</div>
 					<button type="submit" class="btn btn-primary mt-2">Valider</button>
 				</form>
