--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -15,6 +15,8 @@
 	</header>
 {% else %}
 	<header class="border-bottom shadow">
+	
+	{# header #}
 		<div class="d-flex justify-content-between">
 			<a href="/profil" class="col-3 my-auto d-none d-md-block d-flex align-items-center">
 				<img class="px-3" src="http://localhost:8080/pictures/logo-weride.png" width="100px" alt="logo_weride">
@@ -45,6 +47,7 @@
 				</div>
 			<div class="col-3 d-none d-md-block"></div>
 		</div >
+
 		{# navbar #}
 		<ul class="col-12 col-md-6 col-lg-6 nav nav-pills mx-auto d-flex align-items-center justify-content-around text-center">
 			<li class="col-3 nav-item text-center {% if route == 'profil'  %} border-3 border-primary border-bottom {% endif %}">
