--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -130,8 +130,7 @@
 
 		{# Page photos #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light mb-3 container p-0">
-			<h2 class="card-title m-0 p-1">Mes photos
-				<span class="text-danger">(en construction)<span></h2>
+			<h2 class="card-title m-0 p-1">Mes photos <span class="text-danger">(en construction)<span></h2>
 					<hr class="m-0">
 					<article class="row ">
 						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
