--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -5,8 +5,9 @@
     <meta name="keywords" content="moto, motard, sortie, Ride">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
     <meta name="author" content="Samy CHABANI/ Ylies AZOUZ">
+    <meta name="theme-color" content="#3ECF67">
     <title>Weride</title>   
-   <link rel="icon" type="image/png" href="" />
+   <link rel="icon" type="image/png" href="/pictures/logo-weride.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
     <!-- pourquoi avoir mis le link boostrap dans un block-->   
     {% block stylesheets %} 
