--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -23,7 +23,7 @@
 				{% if not user.picture %} 
 					<img class="col-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
 				{% else %}
-					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
+					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil" class="card-img-top"/>
 				{% endif %}
 					<div class="col-6 p-1 d-flex">
 						<div>
