--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -12,7 +12,7 @@
 			{% if not inspectedUser.picture %}
 				<img class="col-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
 			{% else %}
-				<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" class="card-img-top"/>
+				<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" alt="image de profil utilisateur" class="card-img-top"/>
 			{% endif %}
 			<h6 class="card-title">{{inspectedUser.pseudo}}</h5>
 			<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
@@ -57,7 +57,7 @@
 				<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
 					<div class="col-6 d-flex flex-column justify-content-between">
 						<div class=" d-flex  align-items-center">
-							<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
+							<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil utilisateur" class="card-img-top"/>
 							<div>
 								<h6 class="card-title">{{inspectedUser.pseudo}}</h5>
 								<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}} {{user.motoUser[0].model}} {{user.motoUser[0].cylinder}}</p>
@@ -69,7 +69,7 @@
 						<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
 					</div>
 					<div class="col-6">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+						<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
 						<div class="d-flex justify-content-end">
 							<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">Détails</a>
 						</div>
@@ -90,7 +90,7 @@
 					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
 						<div class="col-6 d-flex flex-column justify-content-between">
 							<div class=" d-flex  align-items-center">
-								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" class="card-img-top"/>
+								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" alt="image de profil qui organise une sortie" class="card-img-top"/>
 								<div>
 									<h6 class="card-title">{{object.userEvent.pseudo}}</h5>
 									<p class="card-subtitle mb-2 text-muted">{{object.userEvent.motoUser[0].brand}} {{object.userEvent.motoUser[0].model}} {{object.userEvent.motoUser[0].cylinder}}</p>
@@ -102,7 +102,7 @@
 							<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
 						</div>
 						<div class="col-6">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+							<iframe  title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
 
 							{# Verifie si l'utilisateur participe à la sortie ou non #}
 							{% set iParticipate = false %}
