--- a/views/template/event/newEvent.html.twig
+++ b/views/template/event/newEvent.html.twig
@@ -45,7 +45,7 @@
 							<label for="pepere"> Pépère</label>
 						</div>
 						<div class="col-4 text-center">
-							<input type="radio" id="normal" name="type" value="normal">
+							<input type="radio" id="normal" name="type" value="normal" checked>
 							<label for="normal"> Normal</label>
 						</div>
 						<div class="col-4 text-center">
