--- a/views/template/authentification/login.html.twig
+++ b/views/template/authentification/login.html.twig
@@ -10,7 +10,7 @@
 				<p class="text-danger my-1">{{err}}</p>
 			{% endfor %}
 			<div>
-				<label class="my-3" for="name">Pseudo</label>
+				<label class="my-3" for="pseudo">Pseudo</label>
 				<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
 			</div>
 			<div>
