--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -12,10 +12,10 @@
 								{% if not userEvent.picture %}
 									<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
 								{% else %}
-									<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{userEvent.id}}/{{userEvent.picture}}" class="card-img-top"/>
+									<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{userEvent.id}}/{{userEvent.picture}}" alt="image de profil" class="card-img-top"/>
 								{% endif %}
 								<div>
-									<h6 class="card-title">{{userEvent.pseudo}}</h5>
+									<h6 class="card-title">{{userEvent.pseudo}}</h6>
 									<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}} {{userEvent.motoUser[0].model}} {{userEvent.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
