--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -7,13 +7,12 @@
     <meta name="author" content="Samy CHABANI/ Ylies AZOUZ">
     <meta name="theme-color" content="#3ECF67">
     <title>Weride</title>   
-   <link rel="icon" type="image/png" href="/pictures/logo-weride.png" />
+   <link rel="icon" type="image/webp" href="/pictures/logo-weride.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
     <!-- pourquoi avoir mis le link boostrap dans un block-->   
     {% block stylesheets %} 
         <link href="/main.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     {% endblock %}  
     
 </head>
@@ -30,7 +29,7 @@
     {% endblock %}
 
      {% block script %}
-        <script src="" ></script>
+           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     {% endblock %}
 
 
