--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -27,7 +27,7 @@
 				</div>
 				<div>
 					<label class="my-3" for="firstName">Email</label>
-					<input type="mail" class="form-control" id="mail" name="mail" placeholder="Entrer votre email" value="{{user.mail}}">
+					<input type="email" class="form-control" id="mail" name="mail" placeholder="Entrer votre email" value="{{user.mail}}">
 					<p class="text-danger">{{errors.mail}}</p>
 				</div>
 				<div>
