--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -2,7 +2,7 @@
 {% block main %}
 	<main>
 		<article class="col-6 mx-auto card-body bg-light border border-muted rounded m-2" id="{{event._id}}">
-			<h3>{{event.title}}</h1>
+			<h1>{{event.title}}</h1>
 			<hr class="m-0">
 			<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
 
@@ -10,10 +10,10 @@
 				{% if not userEvent.picture %}
 					<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
 				{% else %}
-					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{userEvent.id}}/{{userEvent.picture}}" class="card-img-top"/>
+					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{userEvent.id}}/{{userEvent.picture}}" alt="image de profil" class="card-img-top"/>
 				{% endif %}
 				<div>
-					<h6 class="card-title">{{userEvent.pseudo}}</h5>
+					<p class="card-title h5">{{userEvent.pseudo}}</p>
 
 					<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}}
 						{{userEvent.motoUser[0].model}}
