--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "../../main.html.twig" %}
 
 {% block main %}
-    <main class="" style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+    <main class="" style="background: url('./pictures/bg.webp');background-size: cover; background-repeat: no-repeat;">
 
 {# Description #}
     <div class="text-center ">
@@ -13,12 +13,12 @@
     <div class="row col-sm-11 col-md-8 mx-auto text-center ">
       {# Plannification #}
       <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/map.jpg" alt="image_map">
+        <img class="col-12 rounded" src="./pictures/map.webp" alt="image_map">
         <h2 class="p-4 m-0">Organises ta balade en plannifiant ton itinéraire</h2>
       </div>
       {# Budgetisation #}
       <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/gestion.png" alt="image_map">
+        <img class="col-12 rounded" src="./pictures/gestion.webp" alt="image_map">
         <h2 class="p-4 m-0">Maitrises ton budget pour chacune de tes sorties</h2>
       </div>
     </div>
@@ -26,12 +26,12 @@
     <div class="row col-sm-11 col-md-8 mx-auto text-center ">
       {# Publication #}
       <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/motard.jpg" alt="image_map">
+        <img class="col-12 rounded" src="./pictures/motard.webp" alt="image_map">
         <h2 class="p-4 m-0">Frimmes et postes tes plus belles photos</h2>
       </div>
       {# Rencontre #}
       <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/group.jpg" alt="image_map">
+        <img class="col-12 rounded" src="./pictures/group.webp" alt="image_map">
         <h2 class="p-4 m-0">Avales l'asphalte avec un max de potes motards</h2>
       </div>
     </div>
