--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -2,7 +2,7 @@
 
 	<header class="d-flex justify-content-between align-items-center border-bottom shadow">
 		<a href="/" class="col-1 p-3 d-flex  ">
-			<img class="" src="./pictures/logo-weride.png" width="70px" alt="logo_weride">
+			<img class="" src="./pictures/logo-weride.webp" width="70px" alt="logo_weride">
 		</a>
 		<ul class="nav nav-pills">
 			<li class="nav-item">
@@ -19,7 +19,7 @@
 	{# header #}
 		<div class="d-flex justify-content-between">
 			<a href="/profil" class="col-3 my-auto d-none d-md-block d-flex align-items-center">
-				<img class="px-3" src="http://localhost:8080/pictures/logo-weride.png" width="100px" alt="logo_weride">
+				<img class="px-3" src="http://localhost:8080/pictures/logo-weride.webp" width="100px" alt="logo_weride">
 			</a>
 				<div class="col-12 col-md-6 col-lg-6 d-flex justify-content-around align-items-center header">
 				{% if not user.picture %} 
