--- a/views/template/event/updateEvent.html.twig
+++ b/views/template/event/updateEvent.html.twig
@@ -8,32 +8,32 @@
 					<hr class="m-0">
 					<div class="mt-2">
 						<label for="startDate">Date de départ</label>
-						<input type="date" class="form-control" id="startDate" name="startDate" placeholder="" value="{{event.startDate}}">
+						<input type="date" class="form-control" id="startDate" name="startDate"  value="{{event.startDate}}">
 						<p class="text-danger">{{errors.startDate}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="hour">Heure de départ</label>
-						<input type="time" class="form-control" id="hour" name="hour" placeholder="" value="{{event.hour}}">
+						<input type="time" class="form-control" id="hour" name="hour"  value="{{event.hour}}">
 						<p class="text-danger">{{errors.hour}}</p>
 					</div>
 					<div class="mt-2">
-						<label for="endDAte">Date de retour</label>
-						<input type="date" class="form-control" id="endDate" name="endDate" placeholder="" value="{{event.endDate}}">
+						<label for="endDate">Date de retour</label>
+						<input type="date" class="form-control" id="endDate" name="endDate"  value="{{event.endDate}}">
 						<p class="text-danger">{{errors.endDate}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="departureLocation">Lieu de départ</label>
-						<input type="text" class="form-control" id="departureLocation" name="departureLocation" placeholder="" value="{{event.departureLocation}}">
+						<input type="text" class="form-control" id="departureLocation" name="departureLocation" value="{{event.departureLocation}}">
 						<p class="text-danger">{{errors.departureLocation}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="backLocation">Lieu de retour</label>
-						<input type="mail" class="form-control" id="backLocation" name="backLocation" placeholder="" value="{{event.backLocation}}">
+						<input type="mail" class="form-control" id="backLocation" name="backLocation"  value="{{event.backLocation}}">
 						<p class="text-danger">{{errors.backLocation}}</p>
 					</div>
 					<div class="mt-2">
 						<label for="step">Etape</label>
-						<input type="text" class="form-control" id="step" name="step" placeholder="" value="{{event.step}}">
+						<input type="text" class="form-control" id="step" name="step"  value="{{event.step}}">
 						<p class="text-danger">{{errors.step}}</p>
 					</div>
 					<div class="row mt-2 mb-2">
