--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -4,35 +4,38 @@
     <main class="" style="background: url('./pictures/bg.webp');background-size: cover; background-repeat: no-repeat;">
 
 {# Description #}
-    <div class="text-center ">
+    <div class="text-center text-light text-shadow" style="text-shadow: 1px 1px black">
       <h1 class="py-5">Le loup solidaire</h1>
       <p>Pourquoi te balader seul alors que tu peux le faire à plusieurs?</p>
       <p><span class="fw-bold">WeRide</span> te permets d’organiser des balades en bécanes en compagnies des motards de ta région.</p>
     </div>
 
     <div class="row col-sm-11 col-md-8 mx-auto text-center ">
-      {# Plannification #}
-      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/map.webp" alt="image_map">
-        <h2 class="p-4 m-0">Organises ta balade en plannifiant ton itinéraire</h2>
+      {# Rencontre #}
+      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded shadow-lg">
+        <img class="col-12 rounded" src="./pictures/l.jpg" alt="image_map">
+        <h2 class="fs-4 p-4 m-0">Avales l'asphalte avec un max de potes motards</h2>
       </div>
-      {# Budgetisation #}
-      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/gestion.webp" alt="image_map">
-        <h2 class="p-4 m-0">Maitrises ton budget pour chacune de tes sorties</h2>
+      {# Publication #}
+      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded shadow-lg">
+        <img class="col-12 rounded" src="./pictures/g.jpg" alt="image_map">
+        <h2 class="fs-4 p-4 m-0">Frimmes et postes tes plus belles photos</h2>
+        <p class="text-danger">En construction</p>
       </div>
     </div>
-    
+
     <div class="row col-sm-11 col-md-8 mx-auto text-center ">
-      {# Publication #}
-      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/motard.webp" alt="image_map">
-        <h2 class="p-4 m-0">Frimmes et postes tes plus belles photos</h2>
+      {# Plannification #}
+      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded shadow-lg">
+        <img class="col-12 rounded" src="./pictures/e.jpg" alt="image_map">
+        <h2 class="fs-4 p-4 m-0">Organises ta balade en plannifiant ton itinéraire</h2>
+        <p class="text-danger">En construction</p>
       </div>
-      {# Rencontre #}
-      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded">
-        <img class="col-12 rounded" src="./pictures/group.webp" alt="image_map">
-        <h2 class="p-4 m-0">Avales l'asphalte avec un max de potes motards</h2>
+      {# Budgetisation #}
+      <div class="col-sm-11 col-md-4 bg-light p-0 mx-auto my-3 text-success rounded shadow-lg">
+        <img class="col-12 rounded" src="./pictures/u.png" alt="image_map">
+        <h2 class="fs-4 p-4 m-0">Maitrises ton budget pour chacune de tes sorties</h2>
+        <p class="text-danger">En construction</p>
       </div>
     </div>
   </main>
