--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -1,7 +1,7 @@
 {% if disconnect %}
 
-	<header class="d-flex justify-content-between align-items-center border-bottom shadow">
-		<a href="/" class="col-1 p-3 d-flex  ">
+	<header class="d-flex justify-content-between align-items-center border-bottom bg-light">
+		<a href="/" class="col-1 p-1 d-flex  ">
 			<img class="" src="./pictures/logo-weride.webp" width="70px" alt="logo_weride">
 		</a>
 		<ul class="nav nav-pills">
