--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -4,10 +4,10 @@
     <main class="" style="background: url('./pictures/bg.webp');background-size: cover; background-repeat: no-repeat;">
 
 {# Description #}
-    <div class="text-center text-light text-shadow" style="text-shadow: 1px 1px black">
+    <div class="text-center text-light" style="text-shadow: 1px 1px black">
       <h1 class="py-5">Le loup solidaire</h1>
-      <p>Pourquoi te balader seul alors que tu peux le faire à plusieurs?</p>
-      <p><span class="fw-bold">WeRide</span> te permets d’organiser des balades en bécanes en compagnies des motards de ta région.</p>
+      <p class="fs-5">Pourquoi te balader seul alors que tu peux le faire à plusieurs?</p>
+      <p class="fs-5"><span class="fw-bold">WeRide</span> te permets d’organiser des balades en bécanes en compagnies des motards de ta région.</p>
     </div>
 
     <div class="row col-sm-11 col-md-8 mx-auto text-center ">
