--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -14,7 +14,7 @@
 		</ul>
 	</header>
 {% else %}
-	<header class="border-bottom shadow">
+	<header class="border-bottom shadow bg-light">
 	
 	{# header #}
 		<div class="d-flex justify-content-between">
