--- a/views/template/layout/_footer.html.twig
+++ b/views/template/layout/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center border-top">
+<footer class="mt-auto d-flex flex-wrap justify-content-between align-items-center border-top bg-light">
     <div class="col-md-4 d-flex align-items-center">
       <span class="text-muted">© 2021 Company, Inc</span>
     </div>
