--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -5,8 +5,8 @@
 		{% set inspectedUser = user %}
 	{% endif %}
 
-	<main
-		class="">
+	<main class="">
+
 		{# section profil #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 container p-0 d-flex align-items-center">
 			{% if not inspectedUser.picture %}
@@ -60,13 +60,20 @@
 							<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil utilisateur" class="card-img-top"/>
 							<div>
 								<h6 class="card-title">{{inspectedUser.pseudo}}</h6>
-								<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}} {{user.motoUser[0].model}} {{user.motoUser[0].cylinder}}</p>
+								<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
+									{{user.motoUser[0].model}}
+									{{user.motoUser[0].cylinder}}</p>
 							</div>
 						</div>
 						<h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
 						<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
-						<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate|date("d/m/Y")}} au {{event.endDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
-						<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
+						<p class="m-0 text-secondary">&#x1F552; Du
+							{{event.startDate|date("d/m/Y")}}
+							au
+							{{event.endDate|date("d/m/Y")}}</p>
+						<!-- pour configurer le format de la date -->
+						<p class="text-success m-0">Rider
+							{{event.riderJoin.length}}+</p>
 					</div>
 					<div class="col-6">
 						<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
@@ -130,14 +137,16 @@
 
 		{# Page photos #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light mb-3 container p-0">
-			<h2 class="card-title m-0 p-1">Mes photos <span class="text-danger">(en construction)</span></h2>
-					<hr class="m-0">
-					<article class="row ">
-						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
-						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
-						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
-					</article>
-				</section>
+			<h2 class="card-title m-0 p-1">Mes photos
+				<span class="text-danger">(en construction)</span>
+			</h2>
+			<hr class="m-0">
+			<article class="row ">
+				<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+				<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+				<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+			</article>
+		</section>
 
-			</main>
-		{% endblock %}
+	</main>
+{% endblock %}
