--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -92,15 +92,15 @@
 			{% if inspectedUser.eventUser.length == 0 %}
 				<p class="mx-auto my-2 text-danger">Hey l'ami, tu ne participes à aucune sortie !</p>
 			{% endif %}
-			{% for object in authorsEvent %}
-				{% for event in object.eventUser %}
+			{% for authorEvent in authorsEvent %}
+				{% for event in authorEvent.eventUser %}
 					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
 						<div class="col-6 d-flex flex-column justify-content-between">
 							<div class=" d-flex  align-items-center">
-								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" alt="image de profil qui organise une sortie" class="card-img-top"/>
+								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{authorEvent.userEvent.id}}/{{authorEvent.userEvent.picture}}" alt="image de profil qui organise une sortie" class="card-img-top"/>
 								<div>
-									<h6 class="card-title">{{object.userEvent.pseudo}}</h5>
-									<p class="card-subtitle mb-2 text-muted">{{object.userEvent.motoUser[0].brand}} {{object.userEvent.motoUser[0].model}} {{object.userEvent.motoUser[0].cylinder}}</p>
+									<h6 class="card-title">{{authorEvent.userEvent.pseudo}}</h5>
+									<p class="card-subtitle mb-2 text-muted">{{authorEvent.userEvent.motoUser[0].brand}} {{authorEvent.userEvent.motoUser[0].model}} {{authorEvent.userEvent.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
 							<h5 style="color:#2b3658;" class=" ">{{event.departureLocation}}</h5>
@@ -121,13 +121,13 @@
 
 							<div class="d-flex justify-content-between align-items-center">
 								{% if event.riderJoin.length == 0 %}
-									<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+									<a href="/rejoindreEvenement/{{event._id}}/{{authorEvent.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
 								{% elseif iParticipate %}
-									<a href="/annulerParticipation/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-danger">Annuler</a>
+									<a href="/annulerParticipation/{{event._id}}/{{authorEvent.userEvent.id}}/{{user._id}}" class="btn btn-danger">Annuler</a>
 								{% else %}
-									<a href="/rejoindreEvenement/{{event._id}}/{{object.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
+									<a href="/rejoindreEvenement/{{event._id}}/{{authorEvent.userEvent.id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
 								{% endif %}
-								<a href="/evenement/{{event.id}}/{{object.userEvent.id}}" class="btn btn-light text-primary col-4">Détails</a>
+								<a href="/evenement/{{event.id}}/{{authorEvent.userEvent.id}}" class="btn btn-light text-primary col-4">Détails</a>
 							</div>
 						</div>
 					</article>
