--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -57,7 +57,7 @@
 				<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
 					<div class="col-6 d-flex flex-column justify-content-between">
 						<div class=" d-flex  align-items-center">
-							<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil utilisateur" class="card-img-top"/>
+							<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" alt="image de profil utilisateur" class="card-img-top"/>
 							<div>
 								<h6 class="card-title">{{inspectedUser.pseudo}}</h6>
 								<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
