--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -6,13 +6,13 @@
 			<hr class="mt-0">
 			{% for userEvent in listUser %}
 				{% for event in userEvent.eventUser %}
-					<article class="row card-body border border-muted rounded m-2" id="{{event._id}}">
-						<div class="col-6 d-flex flex-column justify-content-between">
+					<article class="row card-body border border-muted rounded m-2 p-2" id="{{event._id}}">
+						<div class="col-6 d-flex flex-column justify-content-between p-2">
 							<div class=" d-flex  align-items-center">
 								{% if not userEvent.picture %}
-									<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
+									<a href="/profil/{{userEvent._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/></a>
 								{% else %}
-									<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{userEvent.id}}/{{userEvent.picture}}" alt="image de profil" class="card-img-top"/>
+									<a href="/profil/{{userEvent._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="/images/userImages/{{userEvent.id}}/{{userEvent.picture}}" alt="image de profil" class="card-img-top"/></a>
 								{% endif %}
 								<div>
 									<h6 class="card-title">{{userEvent.pseudo}}</h6>
@@ -24,7 +24,7 @@
 							<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate|date("d/m/Y")}} au {{event.endDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
 							<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
 						</div>
-						<div class="col-6">
+						<div class="col-6 p-2">
 							<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
 							<div class="d-flex justify-content-between">
 							{# Verifie si l'utilisateur participe à la sortie ou non #}
