--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -23,7 +23,8 @@
 				</div>
 				<div>
 					<label class="my-2" for="image">Photo</label>
-					<input type="file" class="form-control" id="image" name="image">
+					<input type="file" class="form-control" id="image" name="image" accept="image/*">
+					<p class="text-danger">{{errors.picture}}</p>
 				</div>
 				<div>
 					<label class="my-2" for="firstName">Email</label>
