accepter seulement photo

--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -1,6 +1,6 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-	<main style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+	<main>
 		<h1 class="text-center text-light my-5" style="text-shadow: 1px 1px black">Bienvenue dans le monde des motards!</h1>
 			<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" enctype="multipart/form-data" method="post" action="inscription">
 				<h1 class="text-primary">Inscription</h1>
