--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "../../main.html.twig" %}
 
 {% block main %}
-    <main class="" style="background: url('./pictures/bg.webp');background-size: cover; background-repeat: no-repeat;">
+    <main class="">
 
 {# Description #}
     <div class="text-center text-light" style="text-shadow: 1px 1px black">
