--- a/views/template/authentification/login.html.twig
+++ b/views/template/authentification/login.html.twig
@@ -1,6 +1,6 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-	<main style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+	<main>
 		<h1 class="text-center text-light my-5" style="text-shadow: 1px 1px black">Hey, ravis de te revoir!</h1>
 		<!--_id === -->
 		<form class="col-12 col-md-6 col-lg-6 p-3 mx-auto my-5 bg-light rounded" method="post" action="connexion">
