--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -1,4 +1,17 @@
 {% extends "../../main.html.twig" %}
+
+
+{% block stylesheets %}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link
+	rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+	<!-- Ces deux balises link sont à insérer entre les deux balises existantes -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"/>
+
+	<link href="/main.css" rel="stylesheet">
+{% endblock %}
+
 {% block main %}
 	<main>
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 mb-3 bg-light container p-0">
@@ -16,18 +29,31 @@
 								{% endif %}
 								<div>
 									<h6 class="card-title">{{userEvent.pseudo}}</h6>
-									<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}} {{userEvent.motoUser[0].model}} {{userEvent.motoUser[0].cylinder}}</p>
+									<p class="card-subtitle mb-2 text-muted">{{userEvent.motoUser[0].brand}}
+										{{userEvent.motoUser[0].model}}
+										{{userEvent.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
-						    <h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
-							<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
-							<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate|date("d/m/Y")}} au {{event.endDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
-							<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[0].stepCity}}</h5>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[event.mySteps.length - 1].stepCity}}</h5>
+							<p class="m-0 text-secondary">&#x1F552; Du
+								{{event.startDate|date("d/m/Y")}}
+								au
+								{{event.endDate|date("d/m/Y")}}</p>
+							<!-- pour configurer le format de la date -->
+							<p class="text-success m-0">Rider
+								{{event.riderJoin.length}}+</p>
 						</div>
 						<div class="col-6 p-2">
-							<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
-							<div class="d-flex justify-content-between">
-							{# Verifie si l'utilisateur participe à la sortie ou non #}
+							<div class="myCards ">
+								{% for stepDetail in event.mySteps %}
+									<input type="hidden" class="stepsLat" value="{{stepDetail.stepLat}}">
+									<input type="hidden" class="stepsLon" value="{{stepDetail.stepLon}}">
+								{% endfor %}
+							</div>
+							<div
+								class="d-flex justify-content-between">
+								{# Verifie si l'utilisateur participe à la sortie ou non #}
 								{% set iParticipate = false %}
 								{% for idRider in event.riderJoin %}
 									{% if idRider == user._id %}
@@ -40,11 +66,11 @@
 									<p>{{user._id}}</p>
 								{% endif %}
 								{% if event.riderJoin.length == 0 %}
-									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}"   class="btn btn-primary">Je participe</a>
+									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
 								{% elseif iParticipate %}
-									<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}"  class="btn btn-danger">Annuler</a>
+									<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-danger">Annuler</a>
 								{% else %}
-									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}"  class="btn btn-primary">Je participe</a>
+									<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary">Je participe</a>
 								{% endif %}
 								<a href="/evenement/{{event._id}}/{{userEvent._id}}" class="btn btn-light">Détails</a>
 							</div>
@@ -54,4 +80,16 @@
 			{% endfor %}
 		</section>
 	</main>
+
+
+	<!-- Fichier JS -->
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
+
+	<!-- Ces deux balises script sont à insérer entre les deux balises existantes -->
+	<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+	<script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
+	<script src="/js/openStreetMap/listEvent.js"></script>
+
 {% endblock %}
