--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -13,7 +13,7 @@
 
 {% block main %}
 	<main>
-		<article class="col-6 mx-auto card-body bg-light border border-muted rounded m-2" id="{{event._id}}">
+		<article class="col-12 col-md-6 col-lg-6 mx-auto card-body bg-light border border-muted rounded m-2" id="{{event._id}}">
 			<h1>{{event.title}}</h1>
 			<hr class="m-0">
 			<div class="myCards ">
