--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -18,7 +18,7 @@
 	{# header #}
 		<div class="d-flex justify-content-between">
 			<a href="/profil" class="col-3 my-auto d-none d-md-block d-flex align-items-center">
-				<img class="px-3" src="http://localhost:8080/pictures/logo-weride.webp" width="100px" alt="logo_weride">
+				<img class="px-3" src="/pictures/logo-weride.webp" width="100px" alt="logo_weride">
 			</a>
 				<div class="col-12 col-md-6 col-lg-6 d-flex justify-content-around align-items-center header">
 				{% if not user.picture %} 
