--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -20,19 +20,19 @@
 			<a href="/profil" class="col-3 my-auto d-none d-md-block d-flex align-items-center">
 				<img class="px-3" src="/pictures/logo-weride.webp" width="100px" alt="logo_weride">
 			</a>
-				<div class="col-12 col-md-6 col-lg-6 d-flex justify-content-around align-items-center header">
-				{% if not user.picture %} 
-					<img class="col-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
-				{% else %}
-					<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil" class="card-img-top"/>
-				{% endif %}
-					<div class="col-6 p-1 d-flex">
+				<div class="col-12 col-md-6 col-lg-6 d-flex flex-column flex-md-row justify-content-md-around align-items-center header">
+					{% if not user.picture %} 
+					<img class="col-6 col-md-2 p-1 rounded-circle" src="/pictures/default.jpg" class="card-img-top"/>
+					{% else %}
+					<img class="col-6 col-md-2 p-1 rounded-circle" src="/images/userImages/{{user.id}}/{{user.picture}}" alt="image de profil" class="card-img-top"/>
+					{% endif %}
+					<div class="col-6 p-1 d-flex flex-column align-items-center align-items-md-start">
 						<div>
 							<h1>{{user.pseudo}}</h1>
 							<p class="text-white">{{user.motoUser[0].brand}} {{user.motoUser[0].model}} {{user.motoUser[0].cylinder}}</p>
 						</div>
 					</div>
-					<div class="col-4 p-1 d-flex flex-column">
+					<div class="col-10 col-md-4 p-1 d-flex flex-column">
 						<button type="" class="p-0 mt-1 mb-1 btn btn-light">
 							<a href="/deconnexion" class="nav-link p-0">Deconnexion</a>
 						</button>
