--- a/views/template/event/newEvent.html.twig
+++ b/views/template/event/newEvent.html.twig
@@ -30,7 +30,7 @@
 						<p class="text-danger">{{errors.endDate}}</p>
 					</div>
 					<div class="mt-2">
-						<h3>Mes étapes de de sortie</h3>
+						<h3>Mes étapes de sortie</h3>
 						<article id="myCard" style="height:500px;"></article>
 					</div>
 					<div class="row mt-2 mb-2 d-flex justify-content-between">
