--- a/views/template/event/listEvent.html.twig
+++ b/views/template/event/listEvent.html.twig
@@ -15,7 +15,7 @@
 {% block main %}
 	<main>
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 mb-3 bg-light container p-0">
-			<h2 class="card-title m-0 p-1">Actualité</h2>
+			<h2 class="card-title m-0 p-1">Actualitées</h2>
 			<hr class="mt-0">
 			{% for userEvent in listUser %}
 				{% for event in userEvent.eventUser %}
